# mydjangox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  env.template  justfile  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docker-image.yml
config/: settings.py  settings_testing.py  urls.py
healthcheck_app/: test_views.py
templates/: base.html
templates/snippets/: footer.html  header.html
website/: __init__.py  apps.py  test_views.py  urls.py  views.py
website/templates/website/: index.html
